[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kontrack"
version = "0.0.1"
authors = [
  { name="Kirk Roerig", email="mr.possoms@gmail.com" },
]
description = "Time tracking and invoicing for contractors and gig workers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/kontrack"
Issues = "https://github.com/pypa/kontrack/issues"