[tool.poetry]
name = "kontrack"
version = "0.1.0"
description = "Time tracking and invoicing software for gig workers"
authors = ["Kirk Roerig <mr.possoms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
kontrack = "kontrack.__main__:main"